<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center"
        android:text="@string/basic_info"
        android:gravity="center"
        android:background="@color/system_navigation_bar_color"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18" />
    <TextView
        android:id="@+id/tv_car_info"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/car_info"
        android:textSize="@dimen/sp_15"/>
    <View
        style="@style/DividerLineStyle"/>
    <TextView
        android:id="@+id/tv_driver_info"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/driver_info"
        android:textSize="@dimen/sp_15"/>
    <View
        style="@style/DividerLineStyle"/>
    <TextView
        android:id="@+id/tv_system_info"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/system_info"
        android:textSize="@dimen/sp_15"/>
    <View
        style="@style/DividerLineStyle"/>
</LinearLayout>