<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activity.BasicInfoActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/system_navigation_bar_color">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/icon_back"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:text="@string/basic_info"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_car_info"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/car_info"
        android:textSize="@dimen/sp_15"/>
    <View
       style="@style/DividerLineStyle"/>
    <TextView
        android:id="@+id/tv_driver_info"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/driver_info"
        android:textSize="@dimen/sp_15"/>
    <View
        style="@style/DividerLineStyle"/>
    <TextView
        android:id="@+id/tv_system_info"
        style="@style/tvTextShow"
        android:layout_height="@dimen/dp_45"
        android:text="@string/system_info"
        android:textSize="@dimen/sp_15"/>
    <View
        style="@style/DividerLineStyle"/>
</LinearLayout>