<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="@dimen/dp_16"
    android:paddingEnd="@dimen/dp_16"
    android:paddingTop="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_10">
    <TextView
        android:id="@+id/tv_storage_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="主磁盘"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/font_color_333"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_58">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_333"
                android:textSize="@dimen/sp_14"
                android:text="@string/capacity_storage"
                />
            <TextView
                android:id="@+id/tv_capacity_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_666"
                android:textSize="@dimen/sp_14"
                android:layout_marginStart="@dimen/dp_8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/used_storage"
                android:textColor="@color/font_color_666"
                android:textSize="@dimen/sp_14"
                android:layout_marginStart="@dimen/dp_10"/>
            <TextView
                android:id="@+id/tv_used_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_666"
                android:textSize="@dimen/sp_14"
                android:layout_marginStart="@dimen/dp_8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_666"
                android:textSize="@dimen/sp_14"
                android:text="@string/free_storage"
                android:layout_marginStart="@dimen/dp_10"/>
            <TextView
                android:id="@+id/tv_free_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_666"
                android:textSize="@dimen/sp_14"
                android:layout_marginStart="@dimen/dp_8"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_666"
                android:text="@string/disk_status"
               android:textSize="@dimen/sp_14"
                />
            <TextView
                android:id="@+id/tv_disk_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_666"
                android:textSize="@dimen/sp_14"
                android:layout_marginStart="@dimen/dp_8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_666"
                android:textSize="@dimen/sp_14"
                android:text="@string/special_video"
                android:layout_marginStart="@dimen/dp_10"/>
            <TextView
                android:id="@+id/tv_special_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_666"
                android:textSize="@dimen/sp_14"
                android:layout_marginStart="@dimen/dp_8"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>