<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".activity.DriverInfoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/common_left_back_icon"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:text="@string/driver_info"
            android:textColor="@color/font_color_333" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_driver_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_name"
                    android:textSize="@dimen/sp_14"
                    android:paddingStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                
                <TextView
                    android:id="@+id/tv_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_666"/>
            </LinearLayout>
           
            <View  style="@style/UnderLineStyle"/>
            
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_sex"
                    android:paddingStart="@dimen/dp_2"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_333"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_driver_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_666"/>
            </LinearLayout>
            
            <View style="@style/UnderLineStyle"/>
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_id_card"
                    android:textSize="@dimen/sp_14"
                    android:paddingStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_driver_id_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_666"/>
            </LinearLayout>
            <View
                style="@style/UnderLineStyle"/>
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_is_license"
                    android:textSize="@dimen/sp_14"
                    android:paddingStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_driver_is_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_666"/>
            </LinearLayout>
            <View
                style="@style/UnderLineStyle"/>
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/validity_of_driver_is_license"
                    android:textSize="@dimen/sp_14"
                    android:paddingStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_validity_of_driver_is_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_666"/>
            </LinearLayout>
            <View
                style="@style/UnderLineStyle"/>
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_nvq"
                    android:paddingStart="@dimen/dp_2"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_333"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_driver_nvq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_666"/>
            </LinearLayout>
            <View
                style="@style/UnderLineStyle"/>
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/certification_authority"
                    android:textSize="@dimen/sp_14"
                    android:paddingStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"/>
                <TextView
                    android:id="@+id/tv_certification_authority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_666"/>
            </LinearLayout>
            <View
                style="@style/UnderLineStyle"/>
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bind_vehicle"
                    android:textSize="@dimen/sp_14"
                    android:paddingStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"/>
                <TextView
                    android:id="@+id/tv_bind_vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_color_666"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>